Add showResult metod

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                                         <div class="col12">
                                             <div class="form-check">
                                                 <label class="form-check-label">
-                                              <input class="form-check-input" type="radio" name="type" value="basic" checked>
+                                              <input class="form-check-input" type="radio" name="type" value="Básico" checked>
                                               Básico
                                             </label>
                                             </div>
                                             <div class="form-check">
                                                 <label class="form-check-label">
-                                              <input class="form-check-input" type="radio" name="type" value="full">
+                                              <input class="form-check-input" type="radio" name="type" value="Completo">
                                               Completo
                                             </label>
                                             </div>
