--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div class="container">
         <div class="row">
             <div class="col col-md-8 mr-md-auto ml-md-auto">
-                <div id="contenido">
+                <div id="content">
                     <header>
                         <h1 class="text-center">Cotiza tu seguro de Auto</h1>
                     </header>
-                    <div class="row contenido-formulario">
+                    <div class="row form-content">
                         <div class="col col-md-10 mr-md-auto ml-md-auto">
                             <form action="#" id="insuranceQuote">
 
@@ -88,7 +88,7 @@
         });
     </script>
 
-    <script src="js/app.js"></script>
+    <script src="js/appes6.js"></script>
 </body>
 
 </html>
